# serverist-backend

./: Cargo.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
app/: .env  Cargo.toml
app/migrations/2022-06-14-132339_users/: up.sql
app/migrations/2022-06-14-142206_user/: up.sql
app/src/: main.rs
app/src/serverist/: mod.rs
app/src/serverist/infrastructures/application/: command.rs
auth/: Cargo.toml
auth/src/: lib.rs
auth/src/domain/: repositories.rs  services.rs
auth/src/domain/models/: common.rs  definitive.rs  mod.rs  temporary.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/application/: query.rs
common/src/domain/: models.rs
serverist/: Cargo.toml
serverist/src/: lib.rs
serverist/src/application/usecases/server/: command.rs  query.rs
serverist/src/application/usecases/user/: command.rs  query.rs
serverist/src/domain/: repositories.rs
serverist/src/domain/models/: server.rs  user.rs
