[package]
name = "serverist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.1.1"
chrono = "0.4"
chrono-tz = "0.6.1"
regex = "1.5.6"
common = { path = "../common" }
async-trait = "0.1.56"
validator = { version = "0.15.0", features = ["derive"] }